--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
 </head>
 <body>
     <!-- <h1>Hello world</h1> -->
-    <header>
+    <header class="main-header">
         <a href="/" class="logo">
             <img src="images/icon-black.png" alt="website logo">
         </a>
-        <nav>
+        <form class="search" method="get" action="https://example.com/search">
+            <input type="search" name="query" placeholder="Search">
+            <button type="submit">Search</button>
+        </form>
+        <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <div></div>
+    <div class="banner">
+        <h1>Welcome</h1>
+    </div>
     <main></main>
     <footer></footer>
 </body>
