--- a/index.html
+++ b/index.html
@@ -28,7 +28,32 @@
     <div class="banner">
         <h1>Welcome</h1>
     </div>
-    <main></main>
+    <main class="home-content">
+        <div class="card">
+            <img class="card-image" src="images/510c929f-e33f-41c5-96a2-6a092e41fb83.jpg" alt="casual shoes">
+            <div class="card-content">
+                <h4>Casual Shoes</h4>
+                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a cushioned insole for comfort.</p>
+                <a href="#" class="card-button">Buy it now</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="images/700b0f05-183a-401a-9ae8-91d44a44382d.jpg" alt="basketball shoes">
+            <div class="card-content">
+                <h4>Basketball Shoes</h4>
+                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a cushioned insole for comfort.</p>
+                <a href="#" class="card-button">Buy it now</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="images/8721825c-4c3d-4bf1-96e5-4cb9c8d0ddc6.jpg" alt="formal shoes">
+            <div class="card-content">
+                <h4>Formal Shoes</h4>
+                <p>These formal shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a cushioned insole for comfort.</p>
+                <a href="#" class="card-button">Buy it now</a>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
