adding font icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="a web page for learning HTML and CSS">
     <meta name="keyword" content="HTML,CSS,learning">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- <h1>Hello world</h1> -->
@@ -54,6 +55,26 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer class="main-footer">
+        <nav class="footer-nav">
+            <a href="returns.html">Return Policies</a>
+            <a href="exchange.html">Exchange Policies</a>
+            <a href="delivery.html">Delivery Policies</a>
+        </nav>
+        <nav class="social-nav">
+            <a href="https://facebook.com/tiptoeshoes">
+                <i class="fa-brands fa-square-facebook" role="img" aria-label="Facebook"></i>
+            </a>
+            <a href="https://instagram.com/tiptoeshoes">
+                <i class="fa-brands fa-square-instagram" role="img" aria-label="Instagram"></i>
+            </a>
+            <a href="https://twitter.com/tiptoeshoes">
+                <i class="fa-brands fa-square-x-twitter" role="img" aria-label="X"></i>
+            </a>
+            <a href="https://youtube.com/tiptoeshoes">
+                <i class="fa-brands fa-square-youtube" role="img" aria-label="YouTube"></i>
+            </a>
+        </nav>
+    </footer>
 </body>
 </html>
