--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Home Page</title>
     <link rel="icon" href="icons/home-solid.png">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <meta charset="utf-8">
     <meta name="description" content="a web page for learning HTML and CSS">
     <meta name="keyword" content="HTML,CSS,learning">
@@ -16,6 +17,9 @@
         <a href="/" class="logo">
             <img src="images/icon-black.png" alt="website logo">
         </a>
+        <button type="button" class="nav-button">
+            <i class="fa-solid fa-bars"></i>
+        </button>
         <form class="search" method="get" action="https://example.com/search">
             <input type="search" name="query" placeholder="Search">
             <button type="submit">Search</button>
