--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Home Page</title>
     <link rel="icon" href="icons/home-solid.png">
@@ -9,8 +10,14 @@
     <meta name="description" content="a web page for learning HTML and CSS">
     <meta name="keyword" content="HTML,CSS,learning">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- <h1>Hello world</h1> -->
     <header class="main-header">
@@ -38,7 +45,8 @@
             <img class="card-image" src="images/510c929f-e33f-41c5-96a2-6a092e41fb83.jpg" alt="casual shoes">
             <div class="card-content">
                 <h4>Casual Shoes</h4>
-                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a cushioned insole for comfort.</p>
+                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a
+                    cushioned insole for comfort.</p>
                 <a href="#" class="card-button">Buy it now</a>
             </div>
         </div>
@@ -46,7 +54,8 @@
             <img class="card-image" src="images/700b0f05-183a-401a-9ae8-91d44a44382d.jpg" alt="basketball shoes">
             <div class="card-content">
                 <h4>Basketball Shoes</h4>
-                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a cushioned insole for comfort.</p>
+                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a
+                    cushioned insole for comfort.</p>
                 <a href="#" class="card-button">Buy it now</a>
             </div>
         </div>
@@ -54,7 +63,8 @@
             <img class="card-image" src="images/8721825c-4c3d-4bf1-96e5-4cb9c8d0ddc6.jpg" alt="formal shoes">
             <div class="card-content">
                 <h4>Formal Shoes</h4>
-                <p>These formal shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a cushioned insole for comfort.</p>
+                <p>These formal shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a
+                    cushioned insole for comfort.</p>
                 <a href="#" class="card-button">Buy it now</a>
             </div>
         </div>
@@ -81,4 +91,5 @@
         </nav>
     </footer>
 </body>
+
 </html>
