added responsive js and contact page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Home Page</title>
+    <title>Contact Us</title>
     <link rel="icon" href="icons/home-solid.png">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/responsive.css">
@@ -43,32 +43,22 @@
     <div class="banner">
         <h1>Welcome</h1>
     </div>
-    <main class="home-content">
+    <main class="contact-content">
         <div class="card">
-            <img class="card-image" src="images/510c929f-e33f-41c5-96a2-6a092e41fb83.jpg" alt="casual shoes">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6629.297168898269!2d151.1849472763596!3d-33.821380716605475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12af1fe3b9b887%3A0x6fda02f3cc79cba1!2sTAFE%20NSW%20-%20St%20Leonards!5e0!3m2!1sen!2sau!4v1730163082986!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="card-content">
-                <h4>Casual Shoes</h4>
-                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a
-                    cushioned insole for comfort.</p>
-                <a href="#" class="card-button">Buy it now</a>
+                <h4>Our Location</h4>
+                <p>Opening Hours</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-image" src="images/700b0f05-183a-401a-9ae8-91d44a44382d.jpg" alt="basketball shoes">
             <div class="card-content">
-                <h4>Basketball Shoes</h4>
-                <p>These casual shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a
-                    cushioned insole for comfort.</p>
-                <a href="#" class="card-button">Buy it now</a>
+               
             </div>
         </div>
         <div class="card">
-            <img class="card-image" src="images/8721825c-4c3d-4bf1-96e5-4cb9c8d0ddc6.jpg" alt="formal shoes">
             <div class="card-content">
-                <h4>Formal Shoes</h4>
-                <p>These formal shoes feature a sleek, low-top design with a breathable canvas upper, complemented by a
-                    cushioned insole for comfort.</p>
-                <a href="#" class="card-button">Buy it now</a>
+                
             </div>
         </div>
     </main>
