--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,22 @@
         </div>
         <div class="card">
             <div class="card-content">
-               
+               <form action="http://localhost/form-handler" method="post">
+                    <label for="username">Name</label>
+                    <input type="text" name="username" required id="username" placeholder="Jane Smith">
+                    <label for="useremail">Email Address</label>
+                    <input type="email" name="useremail" required id="useremail" placeholder="jsmith@example.com">
+                    <label for="userpref">
+                        <input type="checkbox" name="preference" checked value="marketing" id="userpref">
+                        Do you like spam?
+                    </label>
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" placeholder="Hello there" rows="5" cols="30"></textarea>
+                    <div class="form-buttons">
+                        <button type="reset">Reset</button>
+                        <button type="submit">Submit</button>
+                    </div>
+               </form>
             </div>
         </div>
         <div class="card">
