--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         </div>
         <div class="card">
             <div class="card-content">
-               <form action="http://localhost/form-handler" method="post">
+               <form action="http://localhost/form-handler" method="post" id="contact">
                     <label for="username">Name</label>
                     <input type="text" name="username" required id="username" placeholder="Jane Smith">
                     <label for="useremail">Email Address</label>
