--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <script src="js/script.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </head>
 
 <body>
@@ -35,13 +37,22 @@
             <button type="submit">Search</button>
         </form>
         <nav class="navigation" id="main-nav">
-            <a href="index.html">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+    <!-- 
     <div class="banner">
         <h1>Welcome</h1>
+    </div> 
+    -->
+    <div id="home-carousel" data-flickity='{"cellAlign": true, "contain" : true, "wrapAround": true, "autoPlay": 3000 }'>
+        <div class="slide">1</div>
+        <div class="slide">2</div>
+        <div class="slide">3</div>
+        <div class="slide">4</div>
+        <div class="slide">5</div>
     </div>
     <main class="home-content">
         <div class="card">
